# baobab

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  ingest_lumiere_full.py  ingest_ohada_au.py  ocr_ohada_au.py  pyproject.toml
api/: index.py
baobab/: config.py
baobab/api/: main.py
baobab/api/routes/: accounts.py  bceao.py  cima.py  compliance.py  events.py  health.py  legal.py  legal_fr.py  ohada.py  submissions.py
baobab/core/models/: legal_atom.py  legal_entity.py  legal_event.py  legal_process.py  legal_rule.py
baobab/core/ontology/: cldm.py
baobab/db/: postgres.py
baobab/db/migrations/: 001_initial.sql  002_legal_corpus.sql  003_submissions.sql
baobab/engines/compliance_engine/: engine.py
baobab/engines/event_engine/: cascade.py  engine.py  triggers.py
baobab/engines/reasoning_engine/: engine.py
baobab/engines/risk_engine/: engine.py
baobab/pipeline/: atomize.py  classify.py  extract.py  ingest.py  ingest_corpus.py  ingest_lumiere.py
baobab/pipeline/scrapers/: download_ohada.py  scrape_ccja.py  scrape_crca.py  scrape_ohada_biblio.py
baobab/static/: index.html
baobab/verticals/bceao/: cascades.py  events.py
baobab/verticals/cima/: alerts.py  cascades.py  events.py  models.py
baobab/verticals/fiscalite/: events.py
data/raw/: ccja_arrets.json  ccja_biblio.json  crca_decisions.json  ohada_actes.json
docs/: architecture.md  cima_mvp.md  invariants.md  roadmap.md
tests/: test_accounts_api.py  test_bceao_cascade.py  test_cima_cascade.py  test_cldm.py  test_event_engine.py  test_ohada_cascade.py
(+2 files in other folders)
