[project]
name = "baobab"
version = "0.1.0"
description = "Legal Operating System for Africa"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "neo4j>=5.0.0",
    "pgvector>=0.3.0",
    "python-dateutil>=2.9.0",
    "ulid-py>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.11.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.vercel]
entrypoint = "baobab.api.main:app"
